package survival2d.match.entity.config;

public enum AttachType {
  RANGE,
  MELEE,
}
