package survival2d.match.entity.config;

public enum SkinType {
  DEFAULT
}
