@startuml

title __CONFIG's Class Diagram__\n

  namespace survival2d {
    namespace match.entity.config {
      enum AttachType {
        MELEE
        RANGE
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.config {
      enum BackPackType {
        LEVEL_0
        LEVEL_1
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.config {
      enum BulletType {
        NORMAL
        damage
        damageRadius
        maxRange
        speed
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.config {
      enum GunType {
        NORMAL
        bulletCapacity
        bulletType
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.config {
      enum HelmetType {
        LEVEL_0
        LEVEL_1
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.config {
      enum ItemType {
        BACKPACK
        BANDAGE
        BULLET
        HELMET
        MED_KIT
        PILL
        SKIN
        SODA
        VEST
        WEAPON
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.config {
      enum SkinType {
        DEFAULT
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.config {
      enum VestType {
        LEVEL_0
        LEVEL_1
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.config {
      enum WeaponType {
        GUN
        HAND
        attachType
      }
    }
  }
  

  survival2d.match.entity.config.GunType o-- survival2d.match.entity.config.BulletType : bulletType
  survival2d.match.entity.config.WeaponType o-- survival2d.match.entity.config.AttachType : attachType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
